# vis-brain

./: Application.cpp  Application.h  CMakeLists.txt  algorithm.txt  compile_options.h  exceptions.h  lib.js  main.cpp  test.js  test_Matrix_Iterator.cpp  test_add_sub.cpp  test_calculate.cpp  test_copy_LocalMatrix.cpp  test_counter.cpp  test_datatypes.cpp  test_dot.cpp  test_file_1.cpp  test_file_3.cpp  test_file_4.cpp  test_file_5.cpp  test_file_5.py  test_fill2.cpp  test_graph_1.cpp  test_graph_2.cpp  test_graph_3.cpp  test_info.cpp  test_intercommunicators.cpp  test_main.cpp  test_monte_carlo.cpp  test_mul_div.cpp  test_poisson.cpp  test_reduction.cpp  test_sequence.cpp  test_simple.cpp  test_swap_fill.cpp  test_transpose.cpp
analyzers/: AnalysisBuilder.cpp  AnalysisBuilder.h  Analyzer.cpp  Analyzer.h  PrimaryAnalyzer.cpp  PrimaryAnalyzer.h  PrimaryVsdAnalyzer.cpp  PrimaryVsdAnalyzer.h  SecondaryAnalyzer.cpp  SecondaryAnalyzer.h  SecondaryVsdAnalyzer.cpp  SecondaryVsdAnalyzer.h  VsdAnalyzer.cpp  VsdAnalyzer.h  VsdWriter.cpp  VsdWriter.h
data/: ContiguousMatrix.cpp  ContiguousMatrix.h  Interpolator.cpp  Interpolator.h  LocalMatrix.cpp  LocalMatrix.h  LuDecomposer.cpp  LuDecomposer.h  Matrix.cpp  Matrix.h  exceptions.h
data/graph/: ColorAxis.cpp  ColorAxis.h
data/noise/: NoiseEngine.cpp  NoiseEngine.h  NoiseGenerator.cpp  NoiseGenerator.h  UniformNoiseGenerator.h  distributions.h  noise.cpp  noise.h
data/reader/: BinReader.cpp  BinReader.h  ExternalSaver.cpp  ExternalSaver.h  Loader.cpp  Loader.h  PngReader.cpp  PngReader.h  Reader.cpp  Reader.h  Saver.cpp  Saver.h
data/stream/: AviStream.cpp  AviStream.h  BinStream.cpp  BinStream.h  ExternalStream.cpp  ExternalStream.h  Stream.cpp  Stream.h
jobs/: Job.cpp  Job.h  JobBuilder.cpp  JobBuilder.h  SingleRunJob.cpp  SingleRunJob.h
log/: Engine.cpp  Engine.h  Logger.cpp  Logger.h  SystemLogger.cpp  SystemLogger.h  UserLogger.cpp  UserLogger.h  exceptions.h  output.h
methods/: Distributor.h  DistributorBuilder.cpp  DistributorBuilder.h  EqualDistributor.cpp  EqualDistributor.h  ExplicitEuler.cpp  ExplicitEuler.h  ExplicitRecountEuler.cpp  ExplicitRecountEuler.h  ExplicitRungeKutta.cpp  ExplicitRungeKutta.h  KhoinMethod.cpp  KhoinMethod.h  Method.h  MethodBuilder.cpp  MethodBuilder.h
models/: AbstractNetwork.cpp  AbstractNetwork.h  Brain.cpp  Brain.h  Layer.cpp  Layer.h  Network.cpp  Network.h
models/abstract/: AbstractModel.cpp  AbstractModel.h
models/abstract/glm/: BrokenLineStimulusSaturation.cpp  BrokenLineStimulusSaturation.h  DogFilter.cpp  DogFilter.h  GaussianSpatialKernel.cpp  GaussianSpatialKernel.h  GlmLayer.cpp  GlmLayer.h  HalfSigmoidStimulusSaturation.cpp  HalfSigmoidStimulusSaturation.h  NoStimulusSaturation.cpp  NoStimulusSaturation.h  OdeTemporalKernel.cpp  OdeTemporalKernel.h  SpatialKernel.cpp  SpatialKernel.h  StimulusSaturation.cpp  StimulusSaturation.h  TemporalKernel.cpp  TemporalKernel.h
mpi/: AbstractGraphItem.cpp  AbstractGraphItem.h  App.cpp  App.h  CartesianCommunicator.cpp  CartesianCommunicator.h  Communicator.cpp  Communicator.h  Datatype.cpp  Datatype.h  File.cpp  File.h  Graph.cpp  Graph.h  GraphCommunicator.cpp  GraphCommunicator.h  GraphItem.cpp  GraphItem.h  Group.cpp  Group.h  Info.cpp  Info.h  Intercommunicator.cpp  Intercommunicator.h  Operation.h  Request.h  Status.h  SuperIntercommunicator.h  exceptions.cpp  exceptions.h
param/: Engine.cpp  Engine.h  Loadable.cpp  Loadable.h  Object.cpp  Object.h  exceptions.h
processors/: Equation.cpp  Equation.h  Ode.h  Processor.cpp  Processor.h  SingleOde.cpp  SingleOde.h  State.cpp  State.h  exceptions.h
stimuli/: BarStimulusParameters.cpp  BarStimulusParameters.h  BoundedStimulus.cpp  BoundedStimulus.h  ComplexStimulus.cpp  ComplexStimulus.h  DotStimulusParameters.cpp  DotStimulusParameters.h  ExternalStimulus.cpp  ExternalStimulus.h  GratingStimulusParameters.cpp  GratingStimulusParameters.h  MovingBarStimulus.cpp  MovingBarStimulus.h  MovingDotStimulus.cpp  MovingDotStimulus.h  MovingGaborGrating.cpp  MovingGaborGrating.h  MovingGrating.cpp  MovingGrating.h  MovingRectangularGrating.cpp  MovingRectangularGrating.h  MovingStimulus.cpp  MovingStimulus.h  SequenceStimulus.cpp  SequenceStimulus.h  StationaryBarStimulus.cpp  StationaryBarStimulus.h  StationaryDotStimulus.cpp  StationaryDotStimulus.h  StationaryGaborGrating.cpp  StationaryGaborGrating.h  StationaryGrating.cpp  StationaryGrating.h  StationaryReaderStimulus.cpp  StationaryReaderStimulus.h  StationaryRectangularGrating.cpp  StationaryRectangularGrating.h  StationaryStimulus.cpp  StationaryStimulus.h  (+11 more)
sys/: ExternalMechanism.cpp  ExternalMechanism.h  FileInfo.h  Folder.cpp  Folder.h  Semaphore.h  auxiliary.cpp  auxiliary.h  exceptions.h  security.cpp  security.h  system.cpp
test/: test_LU_decompose.cpp  test_Matrix_Iterator.cpp  test_add_sub.cpp  test_bin_stream.cpp  test_calculate.cpp  test_copy_ContiguousMatrix.cpp  test_copy_LocalMatrix.cpp  test_counter.cpp  test_data_Matrix_synchronize.cpp  test_datatypes.cpp  test_divide.cpp  test_dot.cpp  test_file_1.cpp  test_file_2.cpp  test_file_3.cpp  test_file_4.cpp  test_file_5.cpp  test_fill2.cpp  test_gen_uniform.cpp  test_graph_1.cpp  test_graph_2.cpp  test_graph_3.cpp  test_info.cpp  test_intercommunicators.cpp  test_monte_carlo.cpp  test_mul_div.cpp  test_poisson.cpp  test_reader_bin.cpp  test_reduction.cpp  test_save_png.cpp  test_sequence.cpp  test_simple.cpp  test_staionary_grating.cpp  test_stimulus.cpp  test_swap_fill.cpp  test_transpose.cpp
vis_brain/gui/stream_show/: GoToWindow.py  MainWindow.py  SetLimitsWindow.py  StreamPropertiesWindow.py  __init__.py
vis_brain/project/: __init__.py
vis_brain/readers/: BinReader.py  Loader.py  Reader.py  Saver.py  __init__.py
vis_brain/streamers/: Streamer.py
vis_brain/streams/: BinStream.py  Stream.py  __init__.py
